# TR-Cpp

./: .gitignore  LICENSE  README.md
00_Proje_Hakkinda/: README.md
01_Calisma_Ortami_Kurulumu/: README.md
01_MerhabaDunya/: README.md
02_GIT_Kullanımı/: README.md
03_Proje_Klasor_Yapisi/: LICENSE  Makefile
04_Temel_Terimler/: README.md
05_Makefile_Hazirlanmasi/: README.md
05_Merhaba_Dunya/: README.md  test
06_Ekrana_Veri_Yazdirma/: test
06_Ekrana_Veri_Yazdirma/src/: main.cpp
06_Merhaba_Dunya/: Makefile  README.md  test
06_Merhaba_Dunya/src/: main.cpp
07_Ekrana_Veri_Yazdirma/: Makefile  README.md  test
07_Ekrana_Veri_Yazdirma/src/: main.cpp
07_Kacis_Ifadeleri/: README.md
07_Kacis_Ifadeleri/src/: main.cpp
08_Degiskenler/: Makefile
08_Degiskenler/src/: main.cpp
08_Kacis_Ifadeleri/: Makefile  test
08_Kacis_Ifadeleri/src/: main.cpp
09_Degiskenler/: Makefile  README.md  test
10_Kullanicidan_Veri_Alma/: Makefile  README.md  test
11_Matematiksel_Ifadeler/: README.md  test
12_Kosullu_Ifadeler/: Makefile  README.md  test
13_Donguler/: Makefile  README.md  test
14_Donguler/: test
14_Fonksiyonlar/: Makefile  README.md  test
15_Diziler/: README.md  test
16_Pointer_Kullanimi/: test
17_Vector_Kullanimi/: test
18_List_Kullanimi/: Makefile  test
19_Map_Kullanimi/: test
20_Depolama_Omur/: test
20_Set_Kullanimi/: test
21_Fonksiyonlar/: test
22_Diziler/: test
23_Stack/: test
24_Queue/: Makefile  test
24_Siniflar/: test
25_Namespace_Kullanimi/: Makefile  test
25_String/: test
26_OperatorAsiriYukleme/: test
26_Thread_Kullanimi/: Makefile  test
27_Lambda_Kullanimi/: test
28_Callback_Kullanimi/: Makefile  test
28_Nesne/: test
29_Json_Kullanimi/: CMakeLists.txt  olustur.json
29_Kalitim/: Makefile
2_KacisIfadeleri/: README.md
30_unique_ptr_Kullanimi/: test
31_Dosya_Islemleri/: deneme.txt  test  varolan.txt
32_Vector/: test
33_Listeler/: test
34_Map/: test
37_Queue/: test
90_System_Islemleri/: CMakeLists.txt
91_Dosya_Islemleri/: varolan.txt
92_Cast_Kavrami/: Makefile
92_String_Isleme/: CMakeLists.txt
93_Json_Kullanimi/: README.md  bilgi.json
94_Boost_Kullanimi/: Makefile  test
94_Callback_Kullanimi/: Makefile  test
95_Boost_Kullanimi/: Makefile  test
96_CMAKE_Kullanimi/: CMAKE2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello
96_CMAKE_Kullanimi/src/: main.cpp
96_GOF_Dizayn_Tasarim/: README.md
96_GOF_Dizayn_Tasarım/: README.md
97_Curl/: Makefile  test
98_Bit_Islemleri/: test
98_Lambda_Kullanimi/: Makefile  test
98_Test_Projesi/: Makefile  test
99_Database_Kullanimi/01_PostgreSQL/: CMakeLists.txt  README.md
99_Database_Kullanimi/01_PostgreSQL/src/: main.cpp
99_Database_Kullanimi/02_MySQL/: CMakeLists.txt  README.md
99_Database_Kullanimi/02_MySQL/src/: main.cpp
99_Thread_Kullanimi/: Makefile  test
99_Thread_Kullanımı/: Makefile
(+205 files in other folders)
